--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"  style="height: 100%;">
+<html lang="en" style="height: 100%">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -24,11 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>mused</title>
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon" />
   </head>
-  <body
-    style="height: 100%; margin: 0px"
-  >
+  <body style="height: 100%; margin: 0px">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="height: 100%"></div>
     <!--
